Fixed overlap logo

--- a/assets/sass/site/_common-structure.scss
+++ b/assets/sass/site/_common-structure.scss
@@ -202,3 +202,9 @@ body.scrolled {
 	width: 100%;
 	clear: both;
 }
+
+.first-section {
+	.site-header {
+		position: relative;
+	}
+}
